--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,11 @@ button {
   background: transparent;
   white-space: nowrap;
 }
-
+h3 {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
 dl,
 ul,
 ol,
