feat : 마커 이미지 커스텀 및 리덕스 세팅

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -30,7 +30,7 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  background-image: url(sp_pc_rtn.50338ec21e201c8f5cbb4a0abe2186c4.png);
+  background-image: url(../../images/sp_pc_rtn.50338ec21e201c8f5cbb4a0abe2186c4.png);
   background-size: 800px 800px;
   background-position: -239px -309px;
   line-height: 999em;
