--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -3,7 +3,7 @@
   top: 12px;
   left: 11px;
   width: 354px;
-  height: 110px;
+  height: auto;
   border-radius: 3px;
   border: 1px solid #cecece;
   border-bottom: 1px solid #c0c0c0;
@@ -59,29 +59,26 @@
 }
 /*   transition: transform 0.5s; */
 .rolling-container.trans {
-  animation: slider 3s linear infinite;
+  animation: slider 5.5s linear infinite;
 }
 @keyframes slider {
   0% {
     transform: translate(0px, 0px);
   }
-  5% {
-    transform: translate(0px, -2px);
+  3% {
+    transform: translate(0px, 0px);
   }
   25% {
-    transform: translate(0px, -25px);
-  }
-  50% {
     transform: translate(0px, -52px);
   }
-  75% {
-    transform: translate(0px, -72px);
+  50% {
+    transform: translate(0px, -104px);
   }
-  90% {
-    transform: translate(0px, -92px);
+  75% {
+    transform: translate(0px, -156px);
   }
   100% {
-    transform: translate(0px, -104px);
+    transform: translate(0px, -210px);
   }
 }
 .keyword-group .realtime-top-visitors .single-mode .rolling-container .rolling-item {
@@ -108,6 +105,17 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   word-wrap: normal;
+}
+
+.price {
+  position: absolute;
+  display: block;
+  top: 10px;
+  right: 0;
+  text-align: right;
+  font-weight: 300;
+  color: #000;
+  font-size: 16px;
 }
 
 /* 서브필터 */
@@ -201,7 +209,7 @@
 /* 상권, 출근 */
 .home-hot-content {
   position: absolute;
-  top: 130px;
+  top: 80px;
   left: 11px;
   z-index: 2;
   width: 354px;
@@ -211,11 +219,10 @@
   box-sizing: border-box;
 }
 .labs .labs-header {
-  width: 334px;
+  width: auto;
   border-radius: 3px;
   border: 1px solid #cecece;
   border-bottom: 1px solid #c0c0c0;
-  border-top: 1px solid #e9e9e9;
   background-color: #fff;
   box-shadow: 0px 2px 2px rgb(0 0 0 / 8%), -1px 1px 1px rgb(0 0 0 / 3%), 1px 1px 1px rgb(0 0 0 / 3%);
   background: #fff;
@@ -227,7 +234,7 @@
 }
 
 .labs .labs-button {
-  flex: 0 0 23.2%;
+  flex: 1 0;
   margin-right: 6px;
   margin-bottom: 6px;
   box-sizing: border-box;
@@ -238,4 +245,13 @@
   color: #584de4;
   height: 38px;
   border-radius: 6px;
+}
+.labs-button.on {
+  background-color: #584de4;
+  color: #f3f4fc;
+}
+.labs .labs-button:hover {
+  cursor: pointer;
+  background-color: #584de4;
+  color: #f3f4fc;
 }
