feat : 청약페이지 생성

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -107,10 +107,10 @@
   word-wrap: normal;
 }
 
-.price {
+.rank-price {
   position: absolute;
   display: block;
-  top: 10px;
+  top: 0;
   right: 0;
   text-align: right;
   font-weight: 300;
