--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -91,14 +91,14 @@ nav ul li a {
 .feature-img {
   display: flex;
 }
-.card {
+.profile {
   width: 275px;
   height: 290px;
   padding: 5px;
   margin-right: 2%;
   border-radius: 2%;
 }
-.card .content-team {
+.profile .content-team {
   width: 100%;
   height: 100%;
   display: flex;
@@ -109,7 +109,7 @@ nav ul li a {
   background-color: #f0e0e0;
 }
 
-.card .content-team .img {
+.profile .content-team .img {
   height: 130px;
   width: 130px;
   background-color: #ff676d;
@@ -118,7 +118,7 @@ nav ul li a {
   border-radius: 50%;
 }
 
-.card .content-team .img img {
+.profile .content-team .img img {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -126,19 +126,19 @@ nav ul li a {
   background-color: #fff;
   border: 3px solid #fff;
 }
-.card .content-team .details .name {
+.profile .content-team .details .name {
   font-size: 20px;
   font-weight: 800;
 }
-.card .content-team .details .job {
+.profile .content-team .details .job {
   font-size: 20px;
   color: #ff676d;
 }
-.card .content-team .media-icons {
+.profile .content-team .media-icons {
   margin-top: 10px;
   display: flex;
 }
-.card .content-team .media-icons a {
+.profile .content-team .media-icons a {
   height: 35px;
   width: 35px;
   color: #fff;
